k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mibanco
  labels:
    app: hola-mibanco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola-mibanco
  template:
    metadata:
      labels:
        app: hola-mibanco
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: hola-mibanco
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          readinessProbe:
            httpGet: { path: /healthz, port: 8080 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: 8080 }
            initialDelaySeconds: 5
            periodSeconds: 10
