k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hola-mibanco
spec:
  ingressClassName: nginx
  rules:
    - host: hola-mibanco.naodeko.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hola-mibanco
                port:
                  number: 80
